# KalmanFilter

./: .gitignore  README.md  pyproject.toml  train.py
config/: experiment.json  experiment_dukascopy_1d.json  experiment_dukascopy_1h.json
kalmanFilter/ablation_rawprice/docs/: KALMAN_PPO_FULL_STUDY_RESULTS.xlsx
kalmanFilter/ablation_rawprice/scripts/: analyze_rawprice.py  make_workbook.py  run_rawprice_ablation.py  verify_final.py
kalmanFilter/finalModel/scripts/: make_final_workbook.py  run_final_model.py  verify_final_model.py
kalmanFilter/finalModel/workbook/: FINAL_RAW_VS_KALMAN_STUDY.xlsx
kalmanFilter/finalModelFix/scripts/: make_fix_workbook.py  run_fix_pipeline.py
kalmanFilter/finalModelFix/workbook/: KALMAN_RAW_PPO_FIX_STUDY.xlsx
kalmanFilter/outputs/diagnostics/: KALMAN_ENV_VS_NAUTILUS_ACTION_DIFF.csv  KALMAN_ENV_VS_NAUTILUS_OBSERVATION_DIFF.csv  KALMAN_ENV_VS_NAUTILUS_PNL_DIFF.csv  KALMAN_ENV_VS_NAUTILUS_POSITION_DIFF.csv  baseline_audit.json  effective_kalman_runtime_config.json  feature_dimension.json  (+2 more)
kalmanFilter/scripts/: 00_audit_baseline.py  01_build_filtered_ohlcv.py  02_validate_kalman_features.py  03_train_kalman_ppo.py  04_evaluate_kalman_ppo.py  05_run_nautilus_kalman.py
kalmanFilter/src/: __init__.py  audit.py  kalman_ohlc.py  pipeline.py  reports.py  validation.py
nautilus/: run_backtest.py  sim.py  strategy.py
scripts/: compare_timeframes.py  download_dukascopy_xauusd.py
src/rl_gold_trading/: __init__.py  callbacks.py  config.py  data.py  envs.py  features.py  logging_utils.py  metrics.py  normalize.py  run.py  train.py
(+11 files in other folders)
